feat: Resolve PN-126521 "Ctb index 17 2 manual entry update 5205 to allow a list of required statuses to be"
